<resources>
    <string name="app_name">ATM Gokada</string>
    <string name="insert_card_one">Insert Card One</string>
    <string name="insert_card_two">Insert Card Two</string>
    <string name="insert_card_three">Insert Card Three</string>
    <string name="login_default_title">Welcome, User of Card</string>
    <string name="enter_pin">Enter your PIN</string>
    <string name="confirm">Confirm</string>
    <string name="demo_user">Demo User</string>
    <string name="demo_pin">PIN: yoyo</string>
    <string name="insert_card">Insert Card</string>
    <string name="check_balance">Check Balance</string>
    <string name="withdraw">Make Withdrawal</string>
    <string name="deposit">Make Deposit</string>
    <string name="how_much_withdraw_title">How much do you want to WITHDRAW?</string>
    <string name="how_much_deposit_title">How much do you want to DEPOSIT?</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="done">Done</string>
</resources>
